# environmental-webcam-intelligence

./: .gitignore  ENVIRONMENTAL_WEBCAM_ML_FRAMEWORK.md  README.md  pyproject.toml
configs/: mount_tam.yaml  mount_tam_training.yaml
src/enviro_webcam_ml/: __init__.py  annotation.py  annotation_analysis.py  backup.py  capture.py  cli.py  clock.py  config.py  dataset.py  db.py  forecast_weather_lasso.py  image_explanations.py  image_paths.py  image_prediction.py  image_preprocessing.py  image_training.py  image_weather_training.py  model_comparison.py  paired_events.py  paired_image_training.py  paired_weather_lasso.py  quality.py  study_report.py  study_suite.py  training_dataset.py  training_env.py  weather_classifier.py  weather_lasso.py
src/enviro_webcam_ml/weather/: __init__.py  open_meteo.py
tests/: test_annotation.py  test_annotation_analysis.py  test_backup.py  test_capture_manifest.py  test_clock.py  test_config.py  test_db_manifest.py  test_forecast_weather_lasso.py  test_image_explanations.py  test_image_preprocessing.py  test_image_training.py  test_image_weather_training.py  test_model_comparison.py  test_paired_events.py  test_paired_training.py  test_quality.py  test_study_report.py  test_training_dataset.py  test_training_env.py  test_weather_classifier.py  test_weather_lasso.py
