[project]
name = "enviro-webcam-ml"
version = "0.1.0"
description = "Reusable framework for environmental event detection and prediction from fixed webcams and weather data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "urllib3<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
train = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "tqdm>=4.66",
  "torch>=2.3; python_version >= '3.10'",
  "torchvision>=0.18; python_version >= '3.10'",
]

[project.scripts]
envirocam = "enviro_webcam_ml.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
